Table student {
  id integer [pk]
  academic_level varchar
  academic_average float
  intended_field category
  location place
  eligibility category
  interests varchar
  extracurricular_acts category
  university_type string
  email varchar [unique]
  password_hash varchar
}

Table opportunity {
  id integer [pk]
  name varchar
  organization varchar
  description varchar
  deadline date
  location place
  fields category
  min_average float
  level category
  eligibility category
  url varchar
  tags category
}

Enum status_type {
  saved
  applying
  applied
  deadline_approaching
}

Table saved_opportunities {
  id integer [pk]
  student_id integer [not null]
  opportunity_id integer [not null]
  status status_type
}

Ref: saved_opportunities.student_id > student.id
Ref: saved_opportunities.opportunity_id > opportunity.id